nginx-demo/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: NodePort   # or LoadBalancer
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
